# IMEN343-Term-Project

./: .dockerignore  .gitignore  .gitmodules  0322.docx  0403 교수님 면담.docx  3D Face Modeling.docx  Dockerfile  Dockerfile.photometric  README.md  eyewear_face_modeling_handoff_spec_v1.docx  pyproject.toml  requirements-photometric.txt
.devcontainer/: devcontainer.json
docs/: README.en.md  README.ko.md  photometric_integration.md  requirements_trace.md
src/eyewear/: __init__.py
src/eyewear/cli/: __main__.py
src/eyewear/common/canonicalization/: transform.py
src/eyewear/common/evaluation/: compare.py
src/eyewear/common/geometry/: math3d.py
src/eyewear/common/io/: input_check.py  writers.py
src/eyewear/common/measurements/: compute.py
src/eyewear/common/schema/: models.py  validation.py
src/eyewear/common/visualization/: preview.py
src/eyewear/methods/: template.py
src/eyewear/methods/mediapipe/: runner.py
src/eyewear/methods/photometric/: calibration.py  runner.py  upstream.py
tests/: test_e2e_cli.py  test_photometric_calibration.py  test_photometric_upstream.py  test_schema.py
